      st-scroll-view-Remove-scrollbars-references-on-dispose.patch:
      - Fix crash on theme changes
    + js-main-Throw-error-if-no-valid-default-stylesheet-is-fou.patch:
      - Show errors if no stylesheet is found
    + debian/rules:
      - Run dh_translations and work around an issue with Rosetta and plural
        translations
      - Run dh_install with --fail-missing

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Tue, 28 Aug 2018 00:35:19 +0200

gnome-shell (3.29.91-1) experimental; urgency=medium

  * Team upload
  * New upstream development release
  * Build-depend on mutter 3.29.91
  * Build-depend on Meson 0.47.0
  * Rebase patch series, dropping patches that were applied upstream
  * Normalize package lists with wrap-and-sort -ab
  * d/gnome-shell-common.install: Remove commented-out entry
  * Standards-Version: 4.2.0 (no changes required)

 -- Simon McVittie <smcv@debian.org>  Mon, 20 Aug 2018 21:32:20 +0100

gnome-shell (3.29.90-2ubuntu1) cosmic; urgency=medium

  * Merge with debian, remaining changes
    + Replace gnome-backgrounds dep with ubuntu-wallpapers and Suggests
      gnome-themes-standard-data, gnome-backgrounds
    + Add some Recommends:
      - ubuntu-session (| gnome-session) to have the ubuntu session available
      - xserver-xorg-legacy
    + Update debian/gbp.conf with Ubuntu settings
    + gnome-shell-common.install: Install Ubuntu mode
    + gnome-shell-common.prerm: Remove deprecated ubuntu theme alternative
    + 50_add_ubuntu_desktop_detect.patch
      - add caching for desktop detection to avoid querying the current
        desktop env variable as iterate through the list each time. For the
        time of the Shell process, we can expect this env variable to stay
        stable.
    + 71_smarter_alt_tab.patch
      - quick alt-tab (without showing up the switcher) switch only between
        the last window of the last 2 applications to be focused instead of
        raising all windows of those apps.